test/parser/fail/nobodylet.ang
f : Nat
f = 2 + let in 4                -- == 6